Changed favicon, fixed social icons styling on mobile devices

--- a/Casrou/wwwroot/css/site.css
+++ b/Casrou/wwwroot/css/site.css
@@ -1,11 +1,13 @@
 ﻿body {
-    padding-top: 50px;
+    padding-top: 30px;
     padding-bottom: 20px;
 }
 
 .card-img-top {
     padding-top: 20px;
     width: 50%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .card-img-icon {
